[tool.poetry]
name = "invoice-generator"
version = "0.1.0"
description = "A Streamlit app for generating invoices"
authors = ["Huat Zhi <huatzhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"